# crm

./: pyproject.toml
crm_web/cadastro/: forms.py  models.py  urls.py  views.py
crm_web/cadastro/migrations/: 0001_initial.py  0002_alter_cliente_cnpj.py  0003_alter_cliente_cnpj.py
crm_web/cadastro/static/js/: cnpj_mask.js
crm_web/cadastro/templates/: cadastro_cliente.html  pagina_sucesso.html
crm_web/crm_web/: asgi.py  settings.py  urls.py  wsgi.py
crm_web/telegram_bot/: __init__.py
crm_web/templates/: home.html
crm_web/templates/registration/: login.html
crm_web/usuarios/: admin.py  forms.py  models.py  urls.py  views.py
crm_web/usuarios/migrations/: 0001_initial.py  0002_remove_usuarioempresapermission_usuario_empresa_and_more.py  0003_empresa_cnpj.py  0004_usuarioresponsavel_empresa_funcionario.py  0005_alter_usuarioresponsavel_options_and_more.py  0006_usuarioresponsavel_cpf_alter_empresa_responsavel.py  0007_usuarioresponsavel_usuario.py  0008_usuarioresponsavel_nome.py  0009_alter_empresa_responsavel.py  0010_usuariofuncionario.py
crm_web/usuarios/templates/: cadastrar_empresa.html  cadastrar_funcionario.html  cadastrar_responsavel.html  pagina_sucesso_usuario.html
